--- a/Titanic_Survival_Predictions.ipynb
+++ b/Titanic_Survival_Predictions.ipynb
@@ -20,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = pd.read_csv('C:/Users/billf/Desktop/Data_Science/LogisticRegressionPractice/titanic_train_data.csv')\n",
@@ -1896,7 +1898,9 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train['Sex'] = train['Sex'].map({'female': 0, 'male': 1})\n",
@@ -2620,7 +2624,9 @@
   {
    "cell_type": "code",
    "execution_count": 335,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train['TravelAlone']=np.where((\n",
@@ -2755,7 +2761,9 @@
   {
    "cell_type": "code",
    "execution_count": 338,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_train = train.drop('Survived',1)\n",
@@ -2766,7 +2774,9 @@
   {
    "cell_type": "code",
    "execution_count": 339,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#X_train[list(X_train)]=pd.DataFrame(scaler.transform(X_train))\n",
@@ -2977,7 +2987,9 @@
   {
    "cell_type": "code",
    "execution_count": 344,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "logreg = linear_model.LogisticRegression()\n",
@@ -3005,7 +3017,9 @@
   {
    "cell_type": "code",
    "execution_count": 346,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_test_pred = logreg.predict(X_test)"
@@ -3014,7 +3028,9 @@
   {
    "cell_type": "code",
    "execution_count": 381,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predicted_survive = y_test_pred"
